# Conscious

./: README.md  pyproject.toml  setup_and_launch.bat  setup_and_launch.ps1
config/: default.yaml
docs/: ARCHITECTURE.md  CHAT_INTERFACE_SPEC.md  DEPLOYMENT.md  DIAGRAMS.md  EMOTION_ENGINE_SPEC.md  GETTING_STARTED.md  HARDWARE_REQUIREMENTS.md  IMPLEMENTATION_BLUEPRINT.md  MOSHI_AGENTIC_SYSTEM.md  MOSHI_SETUP_GUIDE.md  PERSONALITY_CONSCIOUS_ULTIMATE.md  PERSONALITY_JARVISPOOL.md  PERSONALITY_PROFILES_COMPLETE.md  PERSONALITY_SKILLS_SPEC.md  PERSONALITY_STUDIO_SPEC.md  RESEARCH_DEEP_DIVE.md  ROADMAP.md  SUPER_GOOSE_INTEGRATION.md  TEST_SPECIFICATIONS.md  VOICE_CONSCIOUS.md  VOICE_PERSONALITY_ENGINE.md  WINDSURF_IMPLEMENTATION_GUIDE.md
scripts/: diagnose_audio.py  download_models.py  launch_moshi_server.py  test_audio.py  test_import.py  test_moshi_api.py
src/conscious/: __init__.py  config.py  server.py
src/conscious.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/conscious/data/: __init__.py
src/conscious/emotion/: __init__.py
src/conscious/memory/: __init__.py
src/conscious/personality/: __init__.py
src/conscious/voice/: __init__.py  agent_api.py  audio_stream.py  moshi_agent.py  moshi_engine.py  server_manager.py
